--- a/project/css/main.css
+++ b/project/css/main.css
@@ -355,94 +355,89 @@ body {
               padding-left: 3%;
               margin-top: 2em;
               text-align: center; }
-              body .wrap .category-content .category-content-right .category-main ul li:hover {
-                overflow: hidden;
-                -moz-transition: scale(1.1);
-                -o-transition: scale(1.1);
-                -webkit-transition: scale(1.1); }
               body .wrap .category-content .category-content-right .category-main ul li img {
-                max-width: 60%;
-                padding-left: 19%; }
-              body .wrap .category-content .category-content-right .category-main ul li .shares {
-                color: #000;
-                width: 0;
-                height: 0;
-                border-top: 50px solid red;
-                border-left: 50px solid transparent;
-                float: right;
-                margin-bottom: 1em; }
-                body .wrap .category-content .category-content-right .category-main ul li .shares p {
-                  color: #fff;
-                  margin-top: -40px;
-                  margin-left: -35px;
-                  -o-transform: rotate(45deg);
-                  -ms-transform: rotate(45deg);
-                  -moz-transform: rotate(45deg);
-                  -webkit-transform: rotate(45deg);
-                  transform: rotate(45deg); }
-              body .wrap .category-content .category-content-right .category-main ul li hr {
-                width: 40px;
-                border-width: 2px;
-                border-style: solid;
-                color: #A8A8A8; }
-              body .wrap .category-content .category-content-right .category-main ul li h4 {
-                margin: 0 0 0 0;
-                font-size: 1.3em;
-                font-weight: 300; }
-              body .wrap .category-content .category-content-right .category-main ul li h5 {
-                margin: 0 0 0 0;
-                font-size: 1.2em;
-                font-weight: 300;
-                color: #E5E103; }
-              body .wrap .category-content .category-content-right .category-main ul li small {
-                opacity: 0.9; }
-              body .wrap .category-content .category-content-right .category-main ul li a {
-                display: block;
-                width: 68%;
-                margin-left: 16%;
-                padding: 0 0 0 0; }
-                body .wrap .category-content .category-content-right .category-main ul li a img {
-                  max-width: 100%;
-                  padding-left: 0; }
-                body .wrap .category-content .category-content-right .category-main ul li a:hover {
-                  opacity: 0.8; }
-              body .wrap .category-content .category-content-right .category-main ul li .no-product {
-                width: 40%;
-                background-color: #5A5A5A;
-                opacity: 0.8;
-                color: #000;
-                padding: 0.5em 0 0.5em 0;
-                font-size: 0.8em;
-                float: left;
-                margin-left: 31%;
-                margin-top: 4%; }
-              body .wrap .category-content .category-content-right .category-main ul li .in-product {
-                width: 40%;
-                background-color: #000;
-                opacity: 0.8;
+                max-width: 65%;
+                padding-left: 12%; }
+            body .wrap .category-content .category-content-right .category-main ul .shares {
+              color: #000;
+              width: 0;
+              height: 0;
+              border-top: 50px solid red;
+              border-left: 50px solid transparent;
+              float: right;
+              margin-bottom: 1em; }
+              body .wrap .category-content .category-content-right .category-main ul .shares p {
                 color: #fff;
-                padding: 0.5em 0 0.5em 0;
-                font-size: 0.8em;
-                float: left;
-                margin-left: 31%;
-                margin-top: 4%; }
-      body .wrap .category-content .pag-nav {
-        display: block;
-        height: 50px;
-        margin: 5% 0 0 35%; }
-        body .wrap .category-content .pag-nav ul {
-          display: inline-block; }
-          body .wrap .category-content .pag-nav ul li {
-            color: #FFFFFF;
-            background-color: #000;
-            margin-left: 0.2em;
-            padding: 0.5em 0.8em; }
-            body .wrap .category-content .pag-nav ul li a {
-              color: #FFFFFF;
-              font-weight: bold; }
-            body .wrap .category-content .pag-nav ul li:hover {
+                margin-top: -40px;
+                margin-left: -35px;
+                -o-transform: rotate(45deg);
+                -ms-transform: rotate(45deg);
+                -moz-transform: rotate(45deg);
+                -webkit-transform: rotate(45deg);
+                transform: rotate(45deg); }
+            body .wrap .category-content .category-content-right .category-main ul hr {
+              width: 40px;
+              border-width: 2px;
+              border-style: solid;
+              color: #A8A8A8; }
+            body .wrap .category-content .category-content-right .category-main ul h4 {
+              margin: 0 0 0 0;
+              font-size: 1.3em;
+              font-weight: 300; }
+            body .wrap .category-content .category-content-right .category-main ul h5 {
+              margin: 0 0 0 0;
+              font-size: 1.2em;
+              font-weight: 300;
+              color: #E5E103; }
+            body .wrap .category-content .category-content-right .category-main ul small {
+              opacity: 0.9; }
+            body .wrap .category-content .category-content-right .category-main ul a {
+              display: block;
+              width: 68%;
+              margin-left: 16%;
+              padding: 0 0 0 0; }
+              body .wrap .category-content .category-content-right .category-main ul a img {
+                max-width: 100%;
+                padding-left: 0; }
+              body .wrap .category-content .category-content-right .category-main ul a:hover {
+                opacity: 0.8; }
+            body .wrap .category-content .category-content-right .category-main ul .no-product {
+              width: 40%;
               background-color: #5A5A5A;
-              transition: 0.6s; }
+              opacity: 0.8;
+              color: #000;
+              padding: 0.5em 0 0.5em 0;
+              font-size: 0.8em;
+              float: left;
+              margin-left: 31%;
+              margin-top: 4%; }
+            body .wrap .category-content .category-content-right .category-main ul .in-product {
+              width: 40%;
+              background-color: #000;
+              opacity: 0.8;
+              color: #fff;
+              padding: 0.5em 0 0.5em 0;
+              font-size: 0.8em;
+              float: left;
+              margin-left: 31%;
+              margin-top: 4%; }
+    body .wrap .pag-nav {
+      display: block;
+      height: 50px;
+      margin: 5% 0 0 35%; }
+      body .wrap .pag-nav ul {
+        display: inline-block; }
+        body .wrap .pag-nav ul li {
+          color: #FFFFFF;
+          background-color: #000;
+          margin-left: 0.2em;
+          padding: 0.5em 0.8em; }
+          body .wrap .pag-nav ul li a {
+            color: #FFFFFF;
+            font-weight: bold; }
+          body .wrap .pag-nav ul li:hover {
+            background-color: #5A5A5A;
+            transition: 0.6s; }
     body .wrap .product-content {
       display: grid;
       grid-template-columns: 1fr;
